@@ -4,6 +4,7 @@
 * Added domain constraints for int variables.
 * Added equality constraint for int enums.
 * Matrices of integer and boolean variables can now be created using Model#int_var_matrix Model#bool_var_matrix.
+* Added channel constraint for int enums.
 
 == Version 0.3.0
 
